log/build_2025-03-13_15-57-19/py_srvcli/stderr.log
  File "/home/ubuntu/ros2_ws/install/py_srvcli/lib/python3.10/site-packages/py_srvcli/client_member_function.py", line 39
    else:
    ^^^^
SyntaxError: invalid syntax

